<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <ListPreference
        app:entries="@array/pref_sort_entries"
        app:entryValues="@array/pref_sort_values"
        app:key="@string/pref_sort_key"
        app:title="@string/pref_sort_title"
        />

    <PreferenceCategory
        app:title="@string/pref_genre_title"
        app:enabled="false"
        app:key="@string/pref_genre_key">

        <ListPreference
            app:title="@string/pref_genre_title"
            app:key="@string/genre_key"
            android:entries="@array/pref_genre_types_entries"
            android:entryValues="@array/pref_genre_types_values"
            android:summary="Action"
            />

        <ListPreference
            app:title="@string/pref_sort_title"
            app:entries="@array/pref_genre_sort_entries"
            app:entryValues="@array/pref_genre_sort_values"
            app:summary="@string/top_rated_item_entries"
            app:key="@string/sort_key"
            />
    </PreferenceCategory>
</PreferenceScreen>